[project]
name = "comfyui_user_workspaces"
description = "Provides a structured model and helper nodes for producing long video sequences on ComfyUI using low vram machines."
version = "0.1.0-inprogress"
license = { file = "LICENSE" }
dependencies = ["python_path"]

[project.urls]
Repository = "https://github.com/wgedeon/comfyui_user_workspaces"

[tool.comfy]
PublisherId = "felleroftrees"
DisplayName = "comfyui_user_workspaces"
Icon = ""
